# auraquery-rag-pubmed

./: .gcloudignore  .gitignore  AuraQuery_Architecture_Presentation.md  AuraQuery_Presentation.md  AuraQuery_Story_Presentation.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test_retrieval.py
app/: main.py
app/api/: endpoints.py
app/core/: chat_engine.py  chunker.py  embedder.py  ingestion.py  parser.py  qa_chain.py  query_parser.py  retriever.py
app/db/: ncbi_client.py  vector_store.py
app/models/: __init__.py  schemas.py
app/utils/: config.py  helpers.py  logging.py
frontend/: .firebaserc  firebase.json  package-lock.json  package.json
frontend/.angular/cache/21.1.4/frontend/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend/.angular/cache/21.1.4/frontend/vite/: com.chrome.devtools.json
frontend/.firebase/: hosting.ZGlzdC9mcm9udGVuZC9icm93c2Vy.cache
frontend/src/: index.html
frontend/src/app/: app.html  app.scss  app.ts
frontend/src/app/services/: chat.service.ts
scripts/: batch_ingest_hht.py  build_vector_store.py  debug_qdrant.py  fix_qdrant_index.py  migrate_to_qdrant.py  run_chat.py  run_chunking.py  run_evaluation.py  run_query.py  test_chunking.py  test_query_parser.py  test_retrieval.py  test_retriever.py
