[project]
name = "auraquery"
version = "0.1.0"
description = "RAG-based ChatBot for PubMed Open-Access Medical Literature"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "beautifulsoup4==4.14.3",
    "biopython==1.86",
    "lxml==6.0.2",
    "numpy==2.4.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "pydantic_core==2.41.5",
    "python-dotenv==1.2.1",
    "soupsieve==2.8.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
